Fix on hover background color for dark mode

--- a/components/utilities/searchModal.css
+++ b/components/utilities/searchModal.css
@@ -46,7 +46,7 @@
 }
 
 .ais-InstantSearch .ais-Hits .ais-Hits-list li {
-  @apply m-0 border-b border-b-gray-40 hover:bg-gray-20 hover:dark:bg-gray-60 dark:border-b-gray-80;
+  @apply m-0 border-b border-b-gray-40 hover:bg-gray-20 dark:hover:bg-gray-80 dark:border-b-gray-80;
 }
 
 .ais-Snippet-highlighted,
